# md-wiki-rs

./: Cargo.toml  README.md  blog.html  index.html  test.html
.github/workflows/: build.yml
_static/: style.css
examples/: vault.json
examples/docs/: blog.md  index.md  test.md
examples/templates/: base-head.html  base.html  footer.html  header.html  page.html
src/: main.rs  markdown.rs
