[package]
name = "md-wiki-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.9"
clap = "4.5.21"
lol_html = "2.0"
minijinja =  { version = "2.5", features = ["loader"] }
pulldown-cmark = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.41.1", features = ["full"] }
urlencoding = "2.1"
